[project]
name = "transformer-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "jupyterlab>=4.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "seaborn>=0.13.2",
    "jax[cuda12]>=0.4.35",
    "flax>=0.8.4",
    "optax>=0.2.3",
    "tqdm>=4.67.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "datasets>=4.3.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.1",
    "sentencepiece>=0.2.1",
    "grain>=0.2.15",
]
